@@ -1,3 +1,5 @@
+- Bug fix: OrRule should evaluate to true on prefilter level
+
 32.8.12 (26-08-2021)
 - Fix: Changed degree designation (SchoolLevelType.DEGREE) #UL-REIT-2403
 
